force-app/main/default/objects/PS_ASU_SP_GUEST_V__x.object
<CustomObject>
    <fields>
        <fullName>AUTHOR__c</fullName>
        <description>Data sourced from PS_NAMES_VW.NAME</description>
        <externalDeveloperName>AUTHOR</externalDeveloperName>
        <label>Commenter Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMMENTS__c</fullName>
        <description>Data sourced from Complex amalgamationof fields.Complex amalgamation of fields</description>
        <externalDeveloperName>COMMENTS</externalDeveloperName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COMMENT_DT__c</fullName>
        <description>Data sourced from PS_PERSON_COMMENT, PS_ASU_PP_PROXY.COMMENT_DT, EFFDT</description>
        <externalDeveloperName>COMMENT_DT</externalDeveloperName>
        <label>Comment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMPLID__c</fullName>
        <description>Data sourced from PS_PERSON_COMMENT, PS_ASU_PP_PROXY.COMMON_ID, EMPLID</description>
        <externalDeveloperName>EMPLID</externalDeveloperName>
        <label>Contact</label>
        <length>10</length>
        <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Guest Comment (external)</relationshipLabel>
        <relationshipName>Guest_Comment_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <description>Data source script can be found here: https://docs.google.com/document/d/1rnV1FT8Z8MrhKwiabp5J6F7QojLYXO-ZzsWiaRoSAcU/edit</description>
    <externalDataSource>asu_ps_lightning</externalDataSource>
    <externalName>PS_ASU_SP_GUEST_V</externalName>
    <label>Guest Comment (external)</label>
    <pluralLabel>Guest Comment (external)</pluralLabel>
</CustomObject>